--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6,8 +6,15 @@
     --light-radius: 0.25rem;
 }
 
+@font-face {
+    font-family: "Roboto Mono";
+    font-display: swap;
+    font-weight: 400;
+    src: url("./assets/fonts/RobotoMono-Variable.woff2") format("woff2");
+}
+
 * {
-    font-family: monospace;
+    font-family: "Roboto Mono", monospace;
 }
 
 .number-el {
