--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -17,7 +17,7 @@
     font-family: "Roboto Mono", monospace;
 }
 
-footer {
+footer p {
     font-family: sans-serif !important;
     text-align: center;
 }
